--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hodgef/slate-dark-theme",
-  "version": "3.0.35",
+  "name": "@prss/slate-dark-theme",
+  "version": "3.0.36",
   "description": "Slate Dark Theme for PRSS",
   "main": "build/index.js",
   "scripts": {
